--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "potolki",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://potolki.github.io",
+  "homepage": "https://siarheichura.github.io",
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "@testing-library/jest-dom": "^5.16.5",
