--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "potolki",
   "version": "0.1.0",
+  "homepage": "https://siarheichura.github.io/potolki",
   "private": true,
-  "homepage": "https://siarheichura.github.io",
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "@testing-library/jest-dom": "^5.16.5",
@@ -20,12 +20,12 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
