--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "dev": "react-scripts start",
-    "start": "node --optimize_for_size --max_old_space_size=460 dist/main.js",
+    "start": "node --optimize_for_size --max_old_space_size=460 server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
