--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-input-mask": "^2.0.4",
     "react-scripts": "5.0.1",
     "typescript": "^4.8.3",
     "web-vitals": "^2.1.4"
@@ -49,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-input-mask": "^3.0.6",
     "gh-pages": "^4.0.0",
     "prettier": "2.7.1",
     "sass": "^1.55.0"
